<resources>
    <string name="app_name">LancelotTeamAuctionHackathonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_item_ads">Ads</string>
    <string name="nav_item_favorite">Favorite</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_settings">Settings</string>
    <string name="advertisements_list">Advertisements list</string>
    <string name="add_picture">Add picture</string>
    <string name="item_title">Item title</string>
    <string name="next_button">Continue</string>
    <string name="enter_your_item_title">Enter your item title</string>
    <string name="appearance">Appearance</string>
    <string name="pictures">Pictures</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="initial_bet">Initial bet</string>
    <string name="enter_the_amount_of_initial_bet">Enter the amount of initial bet</string>
    <string name="bet_step">Bet step</string>
    <string name="description">Description</string>
    <string name="detailed_description">Describe your product</string>
    <string name="date_and_time">Date and Time</string>
    <string name="pick_date_header">Define the date when your auction starts</string>
    <string name="pick_date">Set Date</string>
    <string name="define_the_deadline_time">Define the deadline time</string>
    <string name="post">Post</string>
    <string name="set_time">Set time</string>
    <string name="select_the_date">Select the date</string>
    <string name="select_the_time">Select the time</string>
    <string name="login_email_hint">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="advertisements">Auction items</string>
    <string name="title_textView">Advertisement Title</string>
    <string name="tv_initialBet">Initial Bet:</string>
    <string name="tv_initialBetValue">50000</string>
    <string name="tv_betStep">Bet Step: </string>
    <string name="tv_betStepValue">1000</string>
    <string name="btn_back">Back</string>
    <string name="tv_AdvertisementDescription">Description:</string>
    <string name="tv_descriptionValue">Multiline Advertisement Description Example</string>
    <string name="tv_auctionStart">Auction Starts at:</string>
    <string name="tv_auctionStartDate">14.03.2021 14:00</string>
    <string name="tv_end_of_registration">End Of Registration:</string>
    <string name="tv_end_of_registration_date">14.03.2021 10:00</string>
    <string name="btn_register_auction">Register or Bet Up</string>
    <string name="state">Status</string>
    <string name="tv_date_pattern">%s %s</string>
    <string name="inactive">Inactive</string>
    <string name="end_of_registration_date">14.03.2021 10:00</string>
    <string name="registration_text">Successfully registered</string>
    <string name="auction_start_channel_name">Auction start channel</string>
    <string name="auction_start_channel_description">Notifies when the auction starts</string>
    <string name="notification_text">The auction has begun</string>
</resources>