<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.ads.AdvertisementDetailFragment">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/icon_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/viewpager_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/ads_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_textView"
            android:textColor="@color/darkTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpager_container" />

        <TextView
            android:id="@+id/tv_initialBet"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_initialBet"
            android:textColor="@color/darkTextColor"
            app:layout_constraintEnd_toStartOf="@+id/tv_initialBetValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_initialBetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_initialBetValue"
            android:textColor="@color/darkTextColor"
            app:layout_constraintEnd_toStartOf="@+id/tv_betStep"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_initialBet"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_betStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_betStep"
            android:textColor="@color/darkTextColor"
            app:layout_constraintEnd_toStartOf="@+id/tv_betStepValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_initialBetValue"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_betStepValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_betStepValue"
            android:textColor="@color/darkTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_betStep"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_AdvertisementDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_AdvertisementDescription"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_initialBet" />

        <TextView
            android:id="@+id/tv_descriptionValue"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:lines="3"
            android:maxLines="5"
            android:minLines="3"
            android:singleLine="false"
            android:text="@string/tv_descriptionValue"
            android:textColor="@color/darkTextColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_betStepValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_initialBet"
            app:layout_constraintTop_toBottomOf="@+id/tv_AdvertisementDescription" />

        <TextView
            android:id="@+id/tv_auctionStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_auctionStart"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descriptionValue" />

        <TextView
            android:id="@+id/tv_auctionStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/tv_auctionStartDate"
            android:textColor="@color/darkTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_auctionStart"
            app:layout_constraintStart_toEndOf="@+id/tv_auctionStart" />

        <TextView
            android:id="@+id/tv_end_of_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_end_of_registration"
            android:textColor="@color/darkTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_auctionStart" />

        <TextView
            android:id="@+id/tv_end_of_registration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_end_of_registration_date"
            android:textColor="@color/darkTextColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_end_of_registration"
            app:layout_constraintStart_toStartOf="@+id/tv_auctionStartDate" />

        <Button
            android:id="@+id/btn_auction_reg_or_betUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/btn_register_auction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_of_registration_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>