<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg_gradient"
    tools:context=".presentation.ui.create.NewItemFirstPageFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_date_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/header_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/header_date_selector"
        app:layout_constraintTop_toBottomOf="@id/header_date_selector"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <Button
        android:id="@+id/date_pick_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pick_date"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/header_date"
        app:layout_constraintTop_toBottomOf="@id/header_date"
        />

    <TextView
        android:id="@+id/field_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_date"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toEndOf="@id/date_pick_button"
        app:layout_constraintTop_toTopOf="@id/date_pick_button"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/header_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/define_the_deadline_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/date_pick_button"
        app:layout_constraintTop_toBottomOf="@id/date_pick_button"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <Button
        android:id="@+id/time_pick_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_time"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/header_time"
        app:layout_constraintTop_toBottomOf="@id/header_time"
        />

    <TextView
        android:id="@+id/field_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_time"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toEndOf="@id/time_pick_button"
        app:layout_constraintTop_toTopOf="@id/time_pick_button"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>