<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.ui.create.NewItemFirstPageFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/header_detailed_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailed_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/header_description"
        app:layout_constraintTop_toBottomOf="@id/header_description"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:id="@+id/field_detailed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@drawable/text_field_bg"
        app:boxBackgroundMode="none"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:hint="@string/enter_your_item_title"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@id/header_detailed_description"
        app:layout_constraintTop_toBottomOf="@id/header_detailed_description" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/next_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>